pushing cookies folder

--- a/cookie_recipe/index.html
+++ b/cookie_recipe/index.html
@@ -1,19 +1,18 @@
 ﻿<!DOCTYPE html>
 <head>
 	<title>Cookies</title>
-	<style>
-	h3 {color:grey;}
-	</style>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<h1>The Best Chocolate Chip Cookies</h1>
 		<img src="cookies.jpg">
-		<p><i>Recipe by: My Grandma</p></i>
+		<h3>Recipe by: My Grandma</h3>
 	
 		<h2>Prep Time</h2>
+		
 		<p>45 Min</p>
 
-		<h2>INGREDIENTS</h2>
+		<h2>Ingredients</h2>
 		
 			<ul>
 				<li>1 1/2 cup (3 sticks) softened butter</li>
@@ -32,7 +31,7 @@
 		
 
 
-		<h2>How to make Mama’s Recipe</h2>
+		<h2>How to make Mama’s Recipe: The Best Chocolate Chip Cookies</h2>
 		
 		<ol>
 			<li>Preheat oven to 350 degrees</li>
@@ -45,10 +44,12 @@
 			<li>Bake 8-10 minutes or until golden brown</li>
 		</ol> 
 
+		<h3>Nutrition Information</h3>
 
-		<h3><i><b><color="grey">Nutrition Information</color></i></b></h3>
 
-Probably bad for you, but who cares. MMMMMM COOKIES!!!! nom nom nom
+<p>Probably bad for you, but who cares. MMMMMM COOKIES!!!! nom nom nom</p>
+
+<p>This recipe was altered <a href="http://www.opensourcefood.com/people/Amanori/recipes/mamas-recipe-the-best-chocolate-chip-cookies"> from Open Source Recipe</a>.</p>
 </body>
 </html>
 
