--- a/class_2/about.html
+++ b/class_2/about.html
@@ -12,26 +12,35 @@ about.html<!DOCTYPE html>
 
 		<header>
 			<nav>
-				<a href="about.html" class="about-link active-link">ABOUT ME</a>
-				<a href="index.html" class="portfolio-link">PORTFOLIO</a>
+				<a href="about.html" class="about-link active-link">About Me</a> | 
+				<a href="index.html" class="portfolio-link">Portfolio</a>
 			</nav>
 
 			<h1>Jinah Lee</h1>
+      <hr1>
 		</header>
 
 	<section class="about-me">
-			<img src="http://www.fillmurray.com/300/300" alt="Bill Murray" class="about-photo">
-			<h2>I ENJOY LIFE AS A DEVELOPER</h2>
+			<img src=http://assets.freeprintable.com/images/item/thumb/lotus-flower.jpg alt="lotus-flower" class="about-photo">
+			<h3>I ENJOY LIFE AS A DEVELOPER</h3>
 			<p>
 				I'm Joe Johnson, a Developer based in NYC. I Have ten years of experience in the graphic design world, specializing in the creation of responsive websites.
 			</p>
-	</section> 
+     <hr>
+	<br>       
+	<ul>
+		 <li><a href="https://www.facebook.com/" class="facebook">Facebook</a> | 
+  			<a href="https://twitter.com/" class="twitter">Twitter</a> |
+  			<a href="https://www.instagram.com/" class="instagram">Instagram</a> | 
+  			<a href="https://linkedin.com/" class="linkedin">LinkedIn</a></li>
+	</ul>
 
-
-	
+    </section> 
+<hr3>
 
 </div>
 
 </body>
+
 
 </html>
