--- a/class_2/index.html
+++ b/class_2/index.html
@@ -12,12 +12,14 @@
 
 		<header>
 			<nav>
-				<a href="about.html" class="about-link">ABOUT ME</a>
-				<a href="index.html" class="portfolio-link active-link">PORTFOLIO</a>
+       <a href="about.html" class="about-link">About Me</a> |
+				       <a href="index.html" class="portfolio-link active-link">Portfolio</a>
 			</nav>
 
 			<h1>Jinah Lee</h1>
-		</header>
+ <hr>
+
+</header>
 
 	<section class="exp-section">
 
@@ -40,6 +42,8 @@
 			<li>
 				<div><strong>Web Developer</strong>, Startup Matchmaker <small>2015 - present</small></div>
 				<p>Used a design team's wireframes to develop this company's responsive homepage.</p>
+<img src="images/relaxr_deliverable.png" alt="relaxr_deliverable" style="width:304px;height:228px; padding-bottom:20px;">
+
 			</li>
 
 			<li>
